# kame

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/actions/moshi_build/: action.yml
.github/workflows/: precommit.yml
src/kame/: __init__.py  _tar_utils.py  asr_processors.py  run_inference.py  server.py  server_oracle.py  server_oracle_openai_asr.py
src/kame/models/: lm.py  loaders.py
src/kame/modules/: transformer.py
src/kame/utils/: quantize.py
tests/: test_asr_processors.py  test_lm.py  test_server_oracle_language.py  test_server_oracle_logging.py  test_tar_utils.py
